# Karaoke

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .gitignore  Cargo.toml  Shuttle.toml
backend/.shuttle/: config.toml
backend/karaoke-play/: Cargo.toml
backend/migrations/: 0001_init.sql  0002_add_suggestions.sql  0003_add_content.sql  0004_add_config.sql  0005_add__colum_playlist.sql  0006_add_default_config_jukebox.sql
backend/src/: config.rs  content.rs  google_sheet_response.rs  main.rs  song.rs  state.rs  suggestion.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
frontend/src/: config.rs  main.rs
frontend/src/components/: chosen_songs_list.rs  config_text_input.rs  config_toggle_button.rs  content.rs  open_toggle_button.rs  popup_add_song.rs  popup_confirm.rs  popup_delete_song.rs  songs_list.rs  suggestions.rs
frontend/src/types/: bo_config.rs  song.rs
frontend/static/css/: styles.css
