[package]
name = "karaoke"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
shuttle-runtime = "0.49.0"
shuttle-actix-web = "0.49.0"

