[package]
name = "karaoke"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
shuttle-runtime = "0.49.0"
shuttle-actix-web = "0.49.0"
log = "0.4.22"
env_logger = "0.11.5"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
toml = "0.8.19"
actix-files = "0.6.6"

