[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3.76"
serde_json = "1.0.133"
log = "0.4.22"
dotenv = "0.15.0"
gloo = "0.11.0"
gloo-utils = "0.2.0"

